base/src/test/resources/failure/syntax/literate-unresolved.aya.txt
In file $FILE:3:0 ->

  1 | prim I
  2 | prim coe
  3 | /// test `I`
      ^-----------^ Begin of the error
  4 | /// test `unresolved`
      ^--------------------^ End of the error

Error: The name `unresolved` is not defined in the current scope

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
